src/App.css
/* Navbar */
.navbar-nav a {
  font-size: 18px;
}

/* Navbar */
.card {
  transition: all 0.5s ease;
}

.card:hover {
  transform: scale(1.05);
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
}

